# inorixcv

./: README.md  pyproject.toml
.github/workflows/: build.yml
inorixcv/: plot.py
tests/: test_inorixcv.py  test_plot.py
