[tool.poetry]
name = "inorixcv"
version = "0.1.0"
description = "Library for computer vision"
authors = ["Shunta Komatsu <shuntak217@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.2.1"
numpy = "^1.18.4"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.1"
isort = "^4.3.21"
mypy = "^0.770"
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
